<resources>

    <string name="app_name">GoList</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="newacc">Create New Account</string>
    <string name="register">Create Account</string>
    <string name="repeatpassword">Repeat Password</string>
    <string name="url">http://golist.cwsurf.de/</string>
    <string name="newitem">New Item</string>
    <string name="edititem">Edit Item</string>
    <string name="deletelist">Delete List</string>
    <string name="markbought">Mark as bought</string>
    <string name="markedbought">Item marked as bought!</string>
    <string name="markednotbought">Item marked as not bought!</string>
    <string name="marknotbought">Mark as not bought</string>
    <string name="deleteitem">Delete Item</string>
    <string name="save">Save</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="newlist">New List</string>
    <string name="inviteauser">Invite a User</string>
    <string name="people">People</string>
    <string name="invitefriends">Invite Friends</string>
    <string name="search">Search</string>
    <string name="list">List</string>
    <string name="additem">Add Item</string>
    <string name="adduser">Add User</string>
    <string name="editlist">Edit List</string>
    <string name="mylists">My Lists</string>
    <string name="createnewlist">+</string>
    <string name="showuser">Show User</string>
    <string name="deleteitemquestion">Are you sure you want to delete this Item?</string>
    <string name="deletefavoriteitemquestion">Are you sure you want to delete this Item from Favorite Items?</string>
    <string name="markallitemsnotboughtquestion">Are you sure you want to mark all Items as not bought?</string>
    <string name="deleteallitemsboughtquestion">Are you sure you want to delete all bought Items?</string>
    <string name="markallitemsboughtquestion">Are you sure you want to mark all Items as bought?</string>
    <string name="deleteitemtitle">Delete Item</string>
    <string name="leavelisttitle">Leave List</string>
    <string name="leavelistquestion">Are you sure you want to leave this list?</string>
    <string name="deleteboughtitemstitle">Delete bought Items</string>
    <string name="deleteallitemstitle">Delete all Items</string>
    <string name="deleteallitemsquestion">Are you sure you want to delete all Items?</string>
    <string name="markallitemsboughttitle">Mark all Items as bought</string>
    <string name="markallitemsnotboughttitle">Mark all Items as not bought</string>
    <string name="deletelistquestion">This list and all items in it will be deleted!\nAre you sure you want to do this?</string>
    <string name="deletelisttitle">Delete List</string>
    <string name="deleteuserquestion">Do you want to kick this user out of the list?</string>
    <string name="deleteusertitle">Delete User</string>
    <string name="edit">Edit</string>
    <string name="removeauser">Remove a user</string>
    <string name="deleteallitems">Delete all Items</string>
    <string name="importitems">Import Favorite Items</string>
    <string name="markitemsbought">Mark items bought</string>
    <string name="markitemsunbought">Mark items not bought</string>
    <string name="showmembers">Show Members</string>
    <string name="members">Members</string>
    <string name="empty">This list is empty.</string>
    <string name="title">Title</string>
    <string name="changename">Change Name</string>
    <string name="deleteboughtitems">Delete bought Items</string>
    <string name="infoitemcreated">username added itemname to listname</string>
    <string name="infoitemedited">username edited itemname</string>
    <string name="infoitemdeleted">username deleted itemname</string>
    <string name="infoitembought">username changed state of itemname to bought</string>
    <string name="infoitemnotbought">username changed state of itemname to not bought</string>
    <string name="infoallitemsbought">username changed state of all items to bought</string>
    <string name="infoallitemsnotbought">username changed state of all items to not bought</string>
    <string name="infoboughtitemsdeleted">username deleted all bought items</string>
    <string name="infoitemsdeleted">username deleted all items</string>
    <string name="infoitemsfromfavorites">username imported items</string>
    <string name="infolistcreated">username created list listname</string>
    <string name="infouserinvited">username1 invited username2 to listname</string>    
    <string name="infomultiuserinvited">username1 invited users to listname</string>
    <string name="infouserremoved">username1 removed username2 from listname</string>
    <string name="infolistnamechanged">username changed name of oldname to newname</string>
    <string name="infolistleft">username left the list</string>
    <string name="pleaseenternewname">Please enter a new name</string>    
    <string name="importitemsbutton">Import</string>    
    <string name="cancel">Cancel</string> 
    <string name="nofavoriteitems">No Favorite Items</string>    
    <string name="infoinvitationaccepted">username joined the list</string>   
    <string name="infoinvitationnotaccepted">username does not want to join the list</string> 
    <string name="newpassword">New Password</string>
    <string name="repeatnewpassword">Repeat New Password</string>  
    <string name="changepassword">Change Password</string>       
    <string name="deleteaccount">Delete Account</string>           
    <string name="deleteaccounttext">Please enter your password if you want to delete your Account.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="answerinvitationquestion">Do you want to join this list?</string>
    <string name="infofromnfc">username imported itemname from nfc tag</string> 
    
    <string-array name="category_icons">
        <item>@drawable/cheese</item>
        <item>@drawable/sausage</item>
        <item>@drawable/drink</item>
        <item>@drawable/candy</item>
        <item>@drawable/croissant</item>
        <item>@drawable/carrot</item>
        <item>@drawable/icecream</item>
        <item>@drawable/apfel</item>
        <item>@drawable/milk</item>
        <item>@drawable/question</item>
    </string-array>

</resources>