<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:background="#007abb"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/logobackgroundgradient" >

            <da.se.golist.objects.LogoView
                android:id="@+id/logoViewLogin"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editTextName"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dip"
                android:ems="10"
                android:hint="@string/name"
                android:maxLength="50" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/editTextPassword"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dip"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="20" />

            <Button
                android:id="@+id/buttonLogin"
                style="@style/btnStyleOrange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="30dip"
                android:text="@string/login" />

            <Button
                android:id="@+id/buttonRegistrieren"
                style="@style/btnStyleOrange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="25dip"
                android:text="@string/newacc" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>