<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@layout/gradient1"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#20000000"
        android:clickable="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_margin="5dip"
            android:layout_weight="0.97"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:freezesText="true"
            android:gravity="center_vertical"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/newlist"
            android:textColor="#FFFFFF"
            android:textSize="37sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonSave"
            style="@style/btnStyleOrange"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dip"
            android:text="@string/save" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:adjustViewBounds="true"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progressbar3"
            android:interpolator="@android:anim/linear_interpolator"
            android:minHeight="48dp"
            android:progressDrawable="@drawable/progressbar3"
            android:visibility="gone" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextName"
        style="@style/editTextLoginStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/name"
        android:maxLength="50"
        android:textCursorDrawable="@drawable/cursor" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonAddUser"
        style="@style/btnStyleOrange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:text="@string/inviteafriend" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_marginBottom="2dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:textColor="#FFFFFF"
        android:text="@string/people"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/listViewPeople"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip" >
    </ListView>

</LinearLayout>